更新和适配

--- a/pom.xml
+++ b/pom.xml
@@ -84,14 +84,14 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.17-R0.1-SNAPSHOT</version>
+            <version>1.19.4-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>com.github.Slimefun</groupId>
             <artifactId>Slimefun4</artifactId>
-            <version>RC-27</version>
+            <version>RC-33</version>
             <scope>provided</scope>
         </dependency>
 
@@ -105,8 +105,13 @@
         <dependency>
             <groupId>net.guizhanss</groupId>
             <artifactId>GuizhanLib</artifactId>
-            <version>0.6.0</version>
+            <version>1.2.1</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+        	<groupId>net.guizhanss</groupId>
+        	<artifactId>GuizhanLibPlugin</artifactId>
+        	<version>1.2.1</version>
         </dependency>
     </dependencies>
 </project>
